--- a/style.css
+++ b/style.css
@@ -9,6 +9,317 @@ body {
   padding-bottom: 10px;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
+:root {
+  --navbar-text-size: 16px;
+}
+
+body {
+  position: relative;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  font: Arial, sans-serif;
+}
+
+.popup {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.popup-title {
+  font-size: 3rem;
+}
+
+.popup-btns {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.popup-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.7rem;
+  cursor: pointer;
+}
+
+.popup-btn>img {
+  width: min(10vw, 60%);
+  border-radius: 0.5rem;
+}
+
+.popup-btn:hover>img {
+  transform: scale(1.1);
+  transition: 0.7s;
+
+}
+
+.app {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.navBar {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  padding: 0 max(20vw, 20%);
+  border-bottom: 1px solid orange;
+  height: min(3rem, 10%);
+  background-color: black;
+}
+
+.navBar-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  font-size: var(--navbar-text-size);
+}
+
+.headerName, .menu {
+  font-size: 1.1rem;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  width: min(15rem, 30%);
+  justify-content: space-between;
+}
+
+.myLists:hover, .allFilms:hover {
+  cursor: pointer;
+  color: orange;
+  transition: 0.5s;
+}
+
+.main {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 5rem max(20vw, 20%);
+  height: 50%;
+
+}
+
+.main-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: start;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.filter-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.filterOption {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  flex: 1;
+}
+
+.filterOption>select {
+  border: 1px solid white;
+  border-radius: 1rem;
+  padding: 0.5rem 0rem;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+.searchOption {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+.searchIcon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  width: fit-content;
+  height: auto;
+  border-radius: 100%;
+  padding: 0.4rem;
+  cursor: pointer;
+}
+
+#searchInput {
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+}
+
+.films-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: start;
+  gap: 2rem;
+  flex-direction: column;
+  overflow-y: hidden;
+}
+
+.films-container::-webkit-scrollbar-thumb {
+  background-color: #7775;
+}
+
+.films-container::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
+
+.films-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.films-container::-webkit-scrollbar-track {
+  background-color: #5555;
+}
+
+.film {
+  width: 100%;
+  display: flex;
+  align-items: start;
+  flex-direction: row;
+  padding-right: 2rem;
+}
+
+.film-img-container {
+  /* width: fit-content; */
+  height: fit-content;
+}
+
+.film-img {
+  width: 10vw;
+  height: 100%;
+  object-fit: cover;
+}
+
+.film-content {
+  width: 100%;
+  height: 100%;
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+
+.film-genre {
+  display: flex;
+  flex-direction: row;
+  gap: 0.7rem;
+  align-items: center;
+
+}
+
+.film-genre-button {
+  background-color: transparent;
+  border: 1px solid lightgray;
+  color: lightgray;
+  padding: 0.2rem 0.5rem;
+  border-radius: 1rem;
+  font-size: 0.8rem;
+
+}
+
+.film-description, .film-rating {
+  color: lightgray;
+}
+
+.add-to-list, .watch-now {
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid lightgray;
+  color: white;
+  padding: 0.2rem 0.5rem;
+  border-radius: 1rem;
+  font-size: 0.8rem;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  border-style: solid;
+}
+
+.add-to-list:hover, .watch-now:hover {
+  background-color: white;
+  color: black;
+  transition: 0.5s;
+}
+
+.pagination-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  position: relative;
+}
+
+#prevPage {
+  border: 2px solid lightgray;
+  height: 1rem;
+  width: 1rem;
+  rotate: 45deg;
+  border-right: none;
+  border-top: none;
+  cursor: pointer;
+}
+
+#nextPage {
+  border: 2px solid lightgray;
+  height: 1rem;
+  width: 1rem;
+  rotate: -45deg;
+  border-left: none;
+  border-top: none;
+  cursor: pointer;
+}
+
 .title {
   text-align: center;
   margin: 0;
